[tool.poetry]
name = "metricheq"
version = "0.1.0"
description = ""
authors = ["Younes Oumakhou <younesoumakhousudo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.7.1"
coverage = "^7.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
