[tool.poetry]
name = "metricheq"
version = "0.1.0"
description = ""
authors = ["Younes Oumakhou <younesoumakhousudo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.3"
python-dateutil = "^2.8.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"
pygments = "^2.17.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.8.0"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
